# NextEnum

./: .gitignore  README.md  pyproject.toml
examples/: sample_scan.txt  sample_scan.xml
nextenum/: cli.py
nextenum/knowledge/: loader.py
nextenum/knowledge/services/: dns.json  ftp.json  http.json  mysql.json  nfs.json  postgresql.json  rdp.json  smb.json  smtp.json  ssh.json
nextenum/parsers/: normal_parser.py  xml_parser.py
nextenum/recommendations/: engine.py
tests/: test_knowledge_loader.py  test_normal_parser.py  test_recommendation_engine.py  test_xml_parser.py
